add sample mas file

--- a/MARIE.Assembler/Properties/launchSettings.json
+++ b/MARIE.Assembler/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "MARIE.Assembler": {
-      "commandName": "Project",
-      "commandLineArgs": "in.txt out.bin"
+      "commandName": "Project"
     }
   }
 }
